--- a/pages/intro.html
+++ b/pages/intro.html
@@ -26,6 +26,15 @@
     </p>
     
     <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <p>Ik kreeg de opdracht een webshop voor cadeaubonnen te maken. Deze zal als belangrijkste doelgroep vrouwen van 24 tot 35 jaar hebben. Ik moest hiervoor gebruik maken van de kleur ‘hsla(324, 60%, 57%, 1)’, en het lettertype ‘Roboto’. Dit vond ik geen makkelijke opdracht, aangezien ik het niet zo’n mooi lettertype vind. Ook vind ik deze niet echt geschikt voor de doelgroep die ik opgelegd kreeg.
+        <br>
+        <br>
+        Mijn website zal cadeaubonnen van bestaande merken aanbieden. Zowel bonnen voor uitstappen (vb. bongo), als kortingsbonnen voor winkels binnen de doelgroep (vb. hunkemöller). Op deze manier hoeft de persoon die een geschikt cadeau zoekt, niet doorheen het hele internet te surfen, om de juiste bon te kunnen kiezen.
+        <br>
+        <br>
+        Wanneer een persoon inlogt, zal hij al zijn aankopen duidelijk terugvinden in het winkelmandje. Dit winkelmandje kan ook verschillende producten (bonnen) bevatten. De koper kan per product (indien deze het ondersteunt) ook nog kiezen of hij/zij deze bon met de post, of (digitaal) per e-mail wil ontvangen. Deze laatste optie is ideaal voor een last-minute cadeau. De online voucher kan men dan uitprinten of doorsturen naar de ontvanger, en die kan er op zijn beurt mee shoppen.
+        <br>
+        <br>
+        Een leuk extraatje aan deze website, is dat men ook een leuke boodschap aan het cadeau kan toevoegen. Op deze manier maakt men het cadeau al een stuk persoonlijker. Dit kan gaan van een simpel briefje met ‘gelukkige verjaardag’, tot een gepersonaliseerd kaartje (met eigen bedrukking). Voor het een zal men natuurlijk wat meer betalen dan voor het ander.</p>
 </body>
 </html>
