(Titel +) Scenarios + Ideaboard

--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -10,5 +10,17 @@
 </head>
 <body>
     <h1>Scenario's</h1>
+    <p>
+        - Ingrid, 48 jaar, heeft een 24-jarige dochter die juist is afgestudeerd. Ze zou haar graag verrassen, en zoekt hiervoor een geschikt cadeau op BookABon.be. Omdat ze nog niet helemaal weet wat ze zoekt, zou ze eerst graag eens rondkijken op de website.
+        <br>
+        <br>
+        - Lisa, 34 jaar, vindt dat ze wat rust heeft verdiend. Deze zou ze graag samen met haar vriend benutten. Omdat het bijna zijn verjaardag is, besluit ze een cadeaubon te zoeken, maar dan wel één waar ze beiden baat bij hebben (vb. weekendje voor 2).
+        <br>
+        <br>
+        - Kim wordt volgende week 25 jaar. Tommy, die al enkele maanden die leeftijd heeft, is uitgenodigd op het feest, die vanavond al plaatsvind. Hij was dit helemaal uit het oog verloren, maar wil daar zeker niet met lege handen toekomen. Hij besluit last-minute een kijkje te nemen op BookABon.be, om daar de geschikte bon te vinden, en een e-voucher ervan af te printen.
+        <br>
+        <br>
+        - Eva, 28 jaar, houdt van shoppen. Haar vriendinnen in de jeugdbeweging weten dit ook. Nu ze na haar jarenlange inzet, het leidersteam in de jeugdbeweging velaat, besluiten ze haar een waardebon cadeau te geven, die ze kan besteden in haar favoriete winkel.
+    </p>
 </body>
 </html>
