--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,6 +10,63 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
+    <table>
+        <td>
+    <h4>bongo.be</h4>
+        </td>
+        <tr>
+          <th class="positief">Positief</th>
+          <th class="negatief">Negatief</th>
+        </tr>
+        <tr>
+          <td>+ Alle bonnen staan mooi gecategoriseerd.</td>
+          <td>- Wanneer je iets ingetypt hebt in het zoekveld, blijft dit staan wanneer op 'zoeken' hebt geklikt. Hierdoor moet je dit steeds handmatig verwijderen wanneer je een nieuwe zoekopdracht wil invoeren. Wanneer je hier niet op let, typ je de nieuwe zoekopdracht vóór de vorige.</td>
+        </tr>
+        <tr>
+            <td>+ De navigatiebalk blijft zichtbaar wanneer er gescrold wordt op de pagina.</td>
+            <td>- Eerst moet je een zoekopdracht invoeren en op 'zoeken' klikken, voordat je de resultaten kan filteren.</td>
+          </tr>
+          <td>
+      <h4>cadeaubon.be</h4>
+          </td>
+          <tr>
+            <th class="positief">Positief</th>
+            <th class="negatief">Negatief</th>
+          </tr>
+          <tr>
+            <td>+ Ze geven direct een aanbod met de meest gekozen cadeaubonnen van het moment.</td>
+            <td>- In het winkelmandje bestaat de mogelijkheid niet meer om het product (waarde/hoeveelheid) aan te passen. Men moet het dus verwijderen en helemaal opnieuw boeken.</td>
+          </tr>
+          <tr>
+              <td>+ Snelle mogelijkheid om iets te bestellen.</td>
+            </tr>
+            <tr>
+              <td>+ De bonnen staan duidelijk gecategoriseerd.</td>
+            </tr>
+
+            <td>
+                    <h4>swinggift.com</h4>
+                        </td>
+                        <tr>
+                          <th class="positief">Positief</th>
+                          <th class="negatief">Negatief</th>
+                        </tr>
+                        <tr>
+                          <td>+ De bonnen staan goed per categorie geordend.</td>
+                          <td>- De website is druk en oogt niet overzichtelijk.</td>
+                        </tr>
+                        <tr>
+                            <td>+ Houdt rekening met welke tickets populair zijn</td>
+                            <td>- Wanneer je met je muis over 'meer info' of 'bestel nu', onder een product gaat, zou het leuk zijn als deze knop zou 'verkleuren', zo wordt het duidelijker.</td>
+                          </tr>
+                          <tr>
+                            <td>_____</td>
+                            <td>_____</td>
+                          </tr>
+                          <tr>
+                            <td>_____</td>
+                          </tr>
+        </table>
     
 </body>
 </html>
