Scenarios: Aanpassing zinsbouw

--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -20,7 +20,7 @@
         - Kim wordt volgende week 25 jaar. Tommy, die al enkele maanden die leeftijd heeft, is uitgenodigd op het feest, die vanavond al plaatsvind. Hij was dit helemaal uit het oog verloren, maar wil daar zeker niet met lege handen toekomen. Hij besluit last-minute een kijkje te nemen op BookABon.be, om daar de geschikte bon te vinden, en een e-voucher ervan af te printen.
         <br>
         <br>
-        - Eva, 28 jaar, houdt van shoppen. Haar vriendinnen in de jeugdbeweging weten dit ook. Nu ze na haar jarenlange inzet, het leidersteam in de jeugdbeweging velaat, besluiten ze haar een waardebon cadeau te geven, die ze kan besteden in haar favoriete winkel.
+        - Eva, 28 jaar, houdt van shoppen. Haar vriendinnen in de jeugdbeweging weten dit ook. Nu ze na haar jarenlange inzet, het leidersteam in de jeugdbeweging velaat, besluiten ze haar een waardebon cadeau te geven. Die kan ze besteden in haar favoriete winkel.
     </p>
 </body>
 </html>
