--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -5,10 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Digital Styleguide - Eindopdracht NMD-I</title>
+    <link href="https://fonts.googleapis.com/css?family=Karla:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="css/styleguide.css">
+    <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Karla:700" rel="stylesheet">
+    
 </head>
 <body>
     <h1>Digital Styleguide</h1>
-</body>
+    <nav>
+      <br/>
+      <br/>
+    <h4>TYPOGRAFIE</h4>
+    <hr/> 
+    <p id="titel"> Dit is een titel.</p>
+    <p> Roboto, 30pt </p>
+    <br/>
+    <p id="tekst"> Dit is een gewone tekst. </p>
+    <p> Roboto, 12pt</p>
+    <br/> 
+    <h4> KLEUREN </h4>  
+    <hr/> 
+    <img src="images/Kleurenpallet.png" width="400"/> 
+    <br/> 
+ </body>
 </html>
